// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProductCard Debe de incrementar el contador 1`] = `
<div
  className="productCard  undefined"
>
  <h1>
    ProductCard
  </h1>
  <span>
    0
  </span>
  <button
    onClick={[Function]}
  />
</div>
`;

exports[`ProductCard debe de mostrar el componente correactamente 1`] = `
<div
  className="productCard  undefined"
>
  <h1>
    ProductCard
  </h1>
</div>
`;
